# pup

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md  ROADMAP.md  __build.rs  benchmark_results.json  build.rs  environment.yml  pyproject.toml  requirements.txt  run_with_overlays.sh  setup_onnx.sh  test_simple.sh  verify_audit.sh  verify_audit_fixed.sh
.cargo/: config.toml
.config/brew/: Brewfile
.github/actions/setup-dependencies/: action.yml
.github/scripts/: build.sh
.github/workflows/: build.yml  python.yml  rust.yml
assets/: detections_unified.txt
benchmarks/: performance_benchmarks.rs
configs/: README.md  high_confidence_live.toml  production_test.toml  sample_video_detection.toml  sample_video_live.toml  sample_video_production.toml  webcam_live.toml
docs/: TESTING.md
models/: convert.py
python/pup/: __init__.py  coco.py  constants.py  main.py
scripts/: benchmark_inference.py  run_with_overlays.sh  setup_onnx.sh
src/: README.md  common.rs  display.rs  error.rs  inference.rs  lib.rs  live_processor.rs  main.rs  metrics.rs  overlay.rs  python.rs
src/config/: mod.rs
src/gst_plugins/: detection_demo.rs  file_output_demo.rs  mod.rs  simple_demo.rs  simple_visual_demo.rs  visual_demo.rs
src/gst_plugins/pupinference/: imp.rs  mod.rs  simple_imp.rs
src/gst_plugins/pupoverlay/: imp.rs  mod.rs  simple_imp.rs
src/inference/: mod.rs  ort_backend.rs
src/pipeline/: mod.rs
src/preprocessing/: mod.rs
src/python/: __about__.py  coco.py  constants.py  main.py
src/python/runs/detect/train/: args.yaml
src/utils/: detection.rs  imagenet.rs  mod.rs
tests/: __init__.py  benchmark_tests.rs  configuration_tests.rs  coreml_tests.rs  input_source_tests.rs  integration_tests.rs  performance_tests.rs  production_integration_tests.rs  roadmap_validation_tests.rs  test_python_pup.py  test_simple.sh  unified_binary_tests.rs  unit_tests.rs  yolo_post_processing_test.rs
