[package]
edition = "2021"
name = "pup"
version = "0.3.0"
description = "Real-time multi-task computer vision with GStreamer and ONNX Runtime"
authors = ["Tarek Allam Jr <t.allam.jr@gmail.com>"]
license = "MIT"
repository = "https://github.com/tallamjr/pup"
default-run = "pup"

[features]
default = []
python = ["pyo3"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy", "python"))'] }

[target.'cfg(target_vendor= "apple")'.dependencies]

[target.'cfg(target_os = "macos")'.build-dependencies]
system-deps = "7"
[dependencies]
clap = { version = "4", features = ["derive"] }
gstreamer = "0.23.4"
gstreamer-base = "0.23.4"
gstreamer-video = "0.23.4"
gstreamer-app = "0.23.4"
ort = { version = "2.0.0-rc.10", features = [ "download-binaries", "coreml" ] }
ndarray = "0.16"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
cocoa = "0.26"
objc = "0.2.7"
core-foundation = "0.9"
glib = "0.20.7"  # Ensure compatibility across both crates
once_cell = "1.19"
opencv = "0.94.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["macros", "rt"] }

[build-dependencies]
cc = "1.0"

# Hybrid configuration: GStreamer plugin + Python extension
[lib]
name = "gstpup"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pup"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[profile.release]
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
lto = true          # Enable Link Time Optimization
opt-level = "z"     # Optimize for size.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
